# Not all include files are distributed, FreeBSD-2 and SunOS are deprecated
# Keeping support in GIT in case someone wants it back badly
EXTRA_DIST  = README
EXTRA_DIST += linux/netinet/in-my.h linux/netinet/ip_mroute.h           \
              linux/netinet/in-glibc-2.0.h linux/netinet/in-glibc-2.1.h \
              linux/netinet/mroute.h 
EXTRA_DIST += freebsd/netinet/in.h  freebsd/netinet/ip_mroute.h
EXTRA_DIST += netbsd/netinet/in.h   netbsd/netinet/ip_mroute.h
EXTRA_DIST +=                       openbsd/netinet/ip_mroute.h
EXTRA_DIST += netinet/pim.h   netinet/pim_var.h
